chore: refactor NoteBinaryCodecDecode()

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -151,7 +151,7 @@ add_test(i2cChunkedTransmit_test)
 add_test(NoteBinaryDataDecodedLength_test)
 add_test(NoteBinaryDataEncodedLength_test)
 add_test(NoteBinaryDataReset_test)
-add_test(NoteBinaryDecode_test)
+add_test(NoteBinaryCodecDecode_test)
 add_test(NoteBinaryEncode_test)
 add_test(NoteBinaryMaxEncodedLength_test)
 add_test(NoteBinaryMaxDecodedLength_test)
