--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -154,8 +154,8 @@ add_test(NoteBinaryCodecMaxDecodedLength_test)
 add_test(NoteBinaryCodecMaxEncodedLength_test)
 add_test(NoteBinaryStoreDecodedLength_test)
 add_test(NoteBinaryStoreEncodedLength_test)
+add_test(NoteBinaryStoreReceive_test)
 add_test(NoteBinaryStoreReset_test)
-add_test(NoteBinaryReceive_test)
 add_test(NoteBinaryTransmit_test)
 
 if(NOTE_C_COVERAGE)
