chore: refactor NoteBinaryStoreTransmit()

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -156,7 +156,7 @@ add_test(NoteBinaryStoreDecodedLength_test)
 add_test(NoteBinaryStoreEncodedLength_test)
 add_test(NoteBinaryStoreReceive_test)
 add_test(NoteBinaryStoreReset_test)
-add_test(NoteBinaryTransmit_test)
+add_test(NoteBinaryStoreTransmit_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
