feat: add defaults so that platformio.ini doesn't have to be continually switched between a local dev build and CI build.

--- a/test/hitl/card.binary/platformio.ini
+++ b/test/hitl/card.binary/platformio.ini
@@ -20,8 +20,8 @@ build_flags =
 	-Werror # ensure unused functions in the test script generate an error
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D UNITY_INCLUDE_PRINT_FORMATTED
-	# '-D NOTEHUB_PROXY_ROUTE_ALIAS="cobstest"'
-	# '-D PRODUCT_UID="com.blues.mat:test"'
+	'-D DEFAULT_NOTEHUB_PROXY_ROUTE_ALIAS="cobstest"'
+	'-D DEFAULT_PRODUCT_UID=""' # don't set the product UID
 
 lib_deps = blues/Blues Wireless Notecard@^1.4.5
 debug_tool = stlink
