--- a/.github/workflows/md5srv-tests.yml
+++ b/.github/workflows/md5srv-tests.yml
@@ -1,6 +1,12 @@
 name: MD5 Server Tests
 
 on:
+  pull_request:
+    branches: [ master ]
+    paths:
+      - .github/workflows/md5srv-tests.yml
+      - test/hitl/scripts/md5srv**
+
   workflow_dispatch:
   workflow_call:  # reusable workflow
 
