fix: workflow didn't work on self-hosted runner. trying a containerized build instead.

--- a/.github/workflows/md5srv-tests.yml
+++ b/.github/workflows/md5srv-tests.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test-md5srv: # job id
-    runs-on: [self-hosted, linux]
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
