--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,6 +61,7 @@ add_test(NoteRequest_test)
 add_test(NoteRequestResponse_test)
 add_test(NoteRequestResponseJSON_test)
 add_test(NoteRequestWithRetry_test)
+add_test(NoteReset_test)
 add_test(NoteGetEnv_test)
 add_test(NotePayload_test)
 add_test(i2cNoteTransaction_test)
