feat: Add note-c docs site.
We currently don't have any publicly hosted documentation for note-c, beyond the
source-level Doxygen comments. This commit does several things:

- Improves on and adds to our existing Doxygen documentation.
- Connects Doxygen to Sphinx via the Breathe plugin, so that we can produce a
modern-looking docs site with Sphinx.
- Uses the doxyrunner Sphinx plugin from the Zephyr project to build the Doxygen
docs as part of the Sphinx build.
- Adds several new documentation pages. See the .rst files under docs/.
- Amends the docs building script and CI to use the new workflow.

Once we get this code merged, we'll move to hosting the site With GitHub Pages
and then linking to that on blues.dev.

Why Sphinx?

Doxygen produces useful output but the site it produces looks very dated. When
searching for alternatives for C/C++ libraries, nothing really beat Doxygen on
the following criteria:

- Actively maintained.
- Mature.
- Widely used.

Doxygen is something approaching an industry standard for open source docs, for
better or worse. However, we can greatly improve upon Doxygen's site UI by
hooking it up to Sphinx with Breathe, which is what many open source projects
have done, including Zephyr.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
           name: note_c_ci_image
           path: /tmp/note_c_ci_image.tar
 
-  run_doxygen:
+  build_docs:
     runs-on: ubuntu-latest
     if: ${{ always() }}
     needs: [build_ci_docker_image]
@@ -75,9 +75,9 @@ jobs:
         if: ${{ needs.build_ci_docker_image.result == 'success' }}
         uses: ./.github/actions/load-ci-image
 
-      - name: Run doxygen
+      - name: Build docs
         run: |
-          docker run --rm --volume $(pwd):/note-c/ --workdir /note-c/ --entrypoint ./scripts/run_doxygen.sh ghcr.io/blues/note_c_ci:latest
+          docker run --rm --volume $(pwd):/note-c/ --workdir /note-c/ --entrypoint ./scripts/build_docs.sh ghcr.io/blues/note_c_ci:latest
 
   run_unit_tests:
     runs-on: ubuntu-latest
