Clean up card.binary HIL tests.
- Fix various typos.
- Comment out various tests that aren't passing, yet. Most of these are
exercising binary transfers over the Notecard's LPUART. There's a bug here that
we're actively debugging in the Notecard firmware.
- Tweak some of the tests so that they send a carriage return when doing a
binary transmit of arbitrary data. We had a bug in the past where \r was not
handled properly by the Notecard firmware.

--- a/.github/workflows/notecard-binary-tests.yml
+++ b/.github/workflows/notecard-binary-tests.yml
@@ -47,7 +47,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Generate ND5 Server Token
+      - name: Generate MD5 Server Token
         run: |
           [ -n "$MD5SRV_TOKEN" ] || echo "MD5SRV_TOKEN=`uuidgen`" >> $GITHUB_ENV
           # propagate the environment variable so that it's available in the `env` context
@@ -134,7 +134,7 @@ jobs:
         run: |
           MD5SRV_URL="${{steps.localtunnel.outputs.url-1}}"
           echo "MD5SRV_URL=$MD5SRV_URL" >> $GITHUB_ENV
-  
+
       - name: Prep tunnelmole
         if: env.START_TUNNELMOLE!='false'
         uses: pyTooling/Actions/with-post-step@v0.4.5
