--- a/test/hitl/card.binary/platformio.ini
+++ b/test/hitl/card.binary/platformio.ini
@@ -8,8 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:bw_swan_r5]
-
 [env]
 platform = ststm32
 board = bw_swan_r5
@@ -22,11 +20,11 @@ build_flags =
 	-D UNITY_INCLUDE_PRINT_FORMATTED
 	'-D DEFAULT_NOTEHUB_PROXY_ROUTE_ALIAS="cobstest"'
 	'-D DEFAULT_PRODUCT_UID=""' # don't set the product UID
-
-lib_deps = blues/Blues Wireless Notecard@^1.4.5
+lib_deps = blues/Blues Wireless Notecard@^1.5.1
 debug_tool = stlink
 test_framework = unity
-test_port = /dev/cu.usbmodem2056315B58561
+test_port = /dev/swan
+extra_scripts = post:shared/wait_for_test_port.py
 
 [env:debug]
 build_type = debug
