Fix tunnelmole step in HIL tests.
Prior to this commit, tunnelmole was launched in the background and the GitHub
job would proceed once the tmole.log file existed. The problem is that the next
step depends on the environment variable MD5SRV_URL being set, and tmole.log
gets created before that gets set. The result is that the next step may run
prematurely, before MD5SRV_URL is set, causing that step to fail. The solution
is to use a "ready" file. The tunnelmole step doesn't proceed until this file
is created. run_tunnelmole.sh only creates this file once it has done
everything it needs to, which includes setting MD5SRV_URL.

--- a/.github/workflows/notecard-binary-tests.yml
+++ b/.github/workflows/notecard-binary-tests.yml
@@ -152,6 +152,9 @@ jobs:
             echo Stop Tunnelmole
             [ -n "$TMOLE_PID" ] || (echo "TMOLE_PID not set" && exit 1)
             [ -z "$TMOLE_PID" ] || kill $TMOLE_PID
+            # Remove the tmole_ready file, which may be leftover from a prior
+            # run.
+            rm -f $GITHUB_WORKSPACE/tmole_ready
 
       - name: Start tunnelmole
         uses: JarvusInnovations/background-action@v1
@@ -159,9 +162,9 @@ jobs:
         with:
           run: |
             bash ./scripts/run_tunnelmole.sh
+          log-output-if: true
           wait-on:
-            # just a dummy wait-on since this is required.
-            file:${{github.workspace}}/tmole.log
+            file:${{github.workspace}}/tmole_ready
 
       - name: Check server is available
         run: |
