--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -159,6 +159,7 @@ add_test(NoteBinaryStoreReceive_test)
 add_test(NoteBinaryStoreReset_test)
 add_test(NoteBinaryStoreTransmit_test)
 add_test(JPrintUnformatted_test)
+add_test(Jtolower_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
