Add a CI build that checks for unpermitted libc functions.
After some discussion with Ray, we settled on certain libc functions that we're
ok using in note-c. Everything else from libc should be excluded. This commit
adds a CMake option to build the note-c library without libc. It also tells the
linker to generate errors for undefined references. The result is that we can
run this build to see what libc functions we're using in note-c. A new Bash
script, check_libc_dependencies.sh, processes the output of this build. If any
non-permitted functions are found in the undefined reference errors, the script
fails. This protects us against the introduction of non-permitted libc
functions. A new job in ci.yml runs this script on every PR and push to master.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ option(NOTE_C_BUILD_TESTS "Build tests." OFF)
 option(NOTE_C_COVERAGE "Compile for test NOTE_C_COVERAGE reporting." OFF)
 option(NOTE_C_MEM_CHECK "Run tests with Valgrind." OFF)
 option(NOTE_C_BUILD_DOCS "Build docs." OFF)
+option(NOTE_C_NO_LIBC "Build the library without linking against libc, generating errors for any undefined symbols." OFF)
 
 set(NOTE_C_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(note_c SHARED)
@@ -55,6 +56,16 @@ target_include_directories(
     note_c
     PUBLIC ${NOTE_C_SRC_DIR}
 )
+
+if(NOTE_C_NO_LIBC)
+    target_link_options(
+        note_c
+        PRIVATE
+            -nostdlib
+            -nodefaultlibs
+            LINKER:--no-undefined
+    )
+endif()
 
 if(NOTE_C_BUILD_TESTS)
     # Including CTest here rather than in test/CMakeLists.txt allows us to run
