--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ option(NOTE_C_COVERAGE "Compile for test NOTE_C_COVERAGE reporting." OFF)
 option(NOTE_C_MEM_CHECK "Run tests with Valgrind." OFF)
 option(NOTE_C_BUILD_DOCS "Build docs." OFF)
 option(NOTE_C_NO_LIBC "Build the library without linking against libc, generating errors for any undefined symbols." OFF)
+option(NOTE_C_LOW_MEM "Build the library tailored for low memory usage." OFF)
 
 set(NOTE_C_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(note_c SHARED)
@@ -40,7 +41,6 @@ target_sources(
         ${NOTE_C_SRC_DIR}/n_request.c
         ${NOTE_C_SRC_DIR}/n_serial.c
         ${NOTE_C_SRC_DIR}/n_str.c
-        ${NOTE_C_SRC_DIR}/n_ua.c
 )
 target_compile_options(
     note_c
@@ -56,6 +56,23 @@ target_include_directories(
     note_c
     PUBLIC ${NOTE_C_SRC_DIR}
 )
+
+if(NOTE_C_LOW_MEM)
+    target_compile_definitions(
+        note_c
+        PUBLIC
+            NOTE_LOWMEM
+    )
+else()
+    # This file is empty if NOTE_LOWMEM is defined, which leads to a warning
+    # about an empty translation unit, so we only add it to the build if
+    # NOTE_C_LOW_MEM is false.
+    target_sources(
+        note_c
+        PRIVATE
+            ${NOTE_C_SRC_DIR}/n_ua.c
+    )
+endif()
 
 if(NOTE_C_NO_LIBC)
     target_link_options(
@@ -82,11 +99,13 @@ if(NOTE_C_BUILD_TESTS)
 
     target_compile_definitions(
         note_c
-        PUBLIC NOTE_C_TEST
+        PUBLIC
+            NOTE_C_TEST
     )
     target_include_directories(
         note_c
-        PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test/include
+        PRIVATE
+            ${CMAKE_CURRENT_LIST_DIR}/test/include
     )
 
     add_subdirectory(test)
