--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -160,6 +160,7 @@ add_test(NoteBinaryStoreReset_test)
 add_test(NoteBinaryStoreTransmit_test)
 add_test(JPrintUnformatted_test)
 add_test(Jtolower_test)
+add_test(JSON_number_handling_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
