Improve JSON number handling (continued).
- Change NOTE_LOWMEM to NOTE_C_LOW_MEM. If NOTE_C_LOW_MEM is defined, the old
macro NOTE_LOWMEM is automatically defined. Same for NOTE_FLOAT, which was also
removed.
- Change JItoA, JAtoI, NoteSetEnvDefaultInt, and NoteGetEnvInt to use JINTEGER
instead of long int.
- Make JINTEGER a typedef for int64_t. Don't bother trying to save a few bytes
in the NOTE_C_LOW_MEM case.
- Make JNUMBER a typedef for double. On low memory platforms, double is often
the same as float anyway (e.g. AVR).
- Improve comment explaining the JINTEGER_MIN case in JItoA.
- Simplify JSON_number_handling_test.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ if(NOTE_C_LOW_MEM)
     target_compile_definitions(
         note_c
         PUBLIC
-            NOTE_LOWMEM
+            NOTE_C_LOW_MEM
     )
 else()
     # This file is empty if NOTE_LOWMEM is defined, which leads to a warning
