Make more fixes to number handling and NOTE_C_LOW_MEM code.
- Remove #ifdef ERRDBG guard in i2cNoteReset. This was causing us to not call
_I2CReset when we should have been.
- Make JTIME a typedef for JUINTEGER.
- Fix run_unit_tests.sh script so that it actually runs the tests with
NOTE_C_LOW_MEM defined.
- Use JAddIntToObject to add Unix timestamps to J objects in unit tests. This is
necessary to avoid loss of precision when using JAddNumberToObject.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ if(NOTE_C_LOW_MEM)
             NOTE_C_LOW_MEM
     )
 else()
-    # This file is empty if NOTE_LOWMEM is defined, which leads to a warning
+    # This file is empty if NOTE_C_LOW_MEM is defined, which leads to a warning
     # about an empty translation unit, so we only add it to the build if
     # NOTE_C_LOW_MEM is false.
     target_sources(
