--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ option(NOTE_C_MEM_CHECK "Run tests with Valgrind." OFF)
 option(NOTE_C_BUILD_DOCS "Build docs." OFF)
 option(NOTE_C_NO_LIBC "Build the library without linking against libc, generating errors for any undefined symbols." OFF)
 option(NOTE_C_LOW_MEM "Build the library tailored for low memory usage." OFF)
+option(NOTE_C_TEST_SINGLE_PRECISION "Use single precision for JSON floating point numbers." OFF)
 
 set(NOTE_C_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(note_c SHARED)
@@ -81,6 +82,14 @@ if(NOTE_C_NO_LIBC)
             -nostdlib
             -nodefaultlibs
             LINKER:--no-undefined
+    )
+endif()
+
+if(NOTE_C_TEST_SINGLE_PRECISION)
+    target_compile_definitions(
+        note_c
+        PUBLIC
+            NOTE_C_TEST_SINGLE_PRECISION
     )
 endif()
 
