--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -59,6 +59,7 @@ endmacro(add_test)
 add_test(NoteTransaction_test)
 add_test(NoteRequest_test)
 add_test(NoteRequestResponse_test)
+add_test(NoteRequestResponseWithRetry_test)
 add_test(NoteRequestResponseJSON_test)
 add_test(NoteRequestWithRetry_test)
 add_test(NoteReset_test)
