adds test case for checking the NoteResponseError macro returns the correct results for different JSON messages

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -164,6 +164,7 @@ add_test(Jtolower_test)
 add_test(JSON_number_handling_test)
 add_test(JAtoN_test)
 add_test(JNtoA_test)
+add_test(NoteResponseError_test)
 
 if(NOTE_C_COVERAGE)
     find_program(LCOV lcov REQUIRED)
